[gd_scene load_steps=2 format=3 uid="uid://crvurwyl21juw"]

[ext_resource type="Script" uid="uid://bh5133w3ssx7o" path="res://Multicast.gd" id="1_orcuw"]

[node name="Multicast" type="VBoxContainer" unique_id=1102271819 node_paths=PackedStringArray("device_list", "interface_tree", "self_id", "discovery_timer")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -150.5
offset_right = 133.0
offset_bottom = 150.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_orcuw")
device_list = NodePath("DeviceList")
interface_tree = NodePath("InterfaceTree")
self_id = NodePath("SelfID")
discovery_timer = NodePath("DiscoveryTimer")

[node name="SelfID" type="Label" parent="." unique_id=120174213]
layout_mode = 2
text = "Self: 0"

[node name="HSeparator2" type="HSeparator" parent="." unique_id=1958792672]
layout_mode = 2

[node name="Label2" type="Label" parent="." unique_id=2124713090]
layout_mode = 2
text = "Devices:"

[node name="DeviceList" type="ItemList" parent="." unique_id=12342623]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="." unique_id=1931502036]
layout_mode = 2

[node name="Label" type="Label" parent="." unique_id=439355444]
layout_mode = 2
text = "Interface:"

[node name="InterfaceTree" type="Tree" parent="." unique_id=2081943380]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
columns = 2
hide_root = true
select_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=63383551]
layout_mode = 2

[node name="Start" type="Button" parent="HBoxContainer" unique_id=1005119289]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Stop" type="Button" parent="HBoxContainer" unique_id=1570125643]
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="DiscoveryTimer" type="Timer" parent="." unique_id=877142968]

[connection signal="pressed" from="HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="timeout" from="DiscoveryTimer" to="." method="send_discovery"]
